<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/profile_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_16"
                android:src="@mipmap/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/setting_title"
                android:textColor="#444"
                android:textSize="@dimen/sp_18" />
        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_1"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/setting_receive_sms"
                android:textColor="#444"
                android:textSize="@dimen/sp_16" />

            <ch.ielse.view.SwitchView
                android:id="@+id/setting_sms_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:isOpened="true"
                app:primaryColor="@color/theme_red"
                app:primaryColorDark="@color/theme_red" />

            <TextView
                android:id="@+id/setting_sms_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_toLeftOf="@id/setting_sms_switch"
                android:text="@string/on"
                android:textColor="#878787"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:background="#c4c4c4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/setting_new_msg_tong"
                android:textColor="#444"
                android:textSize="@dimen/sp_16" />

            <ch.ielse.view.SwitchView
                android:id="@+id/setting_msg_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:isOpened="true"
                app:primaryColor="@color/theme_red"
                app:primaryColorDark="@color/theme_red" />

            <TextView
                android:id="@+id/setting_msg_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_toLeftOf="@id/setting_msg_switch"
                android:text="@string/on"
                android:textColor="#878787"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:background="#c4c4c4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/setting_msg_no_disturb"
                android:textColor="#444"
                android:textSize="@dimen/sp_16" />

            <ch.ielse.view.SwitchView
                android:id="@+id/setting_disturb_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:isOpened="true"
                app:primaryColor="@color/theme_red"
                app:primaryColorDark="@color/theme_red" />

            <TextView
                android:id="@+id/setting_disturb_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_toLeftOf="@id/setting_disturb_switch"
                android:text="@string/on"
                android:textColor="#878787"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/setting_update"
                android:textColor="#444"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/setting_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_8"
                android:text="V1.0.0"
                android:textColor="#444"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:background="#c4c4c4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/setting_about"
                android:textColor="#444"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_line"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/login_btn_clickable_shape"
        android:gravity="center"
        android:padding="@dimen/dp_16"
        android:text="@string/setting_logout"
        android:textColor="#fff"
        android:textSize="@dimen/sp_18" />

</LinearLayout>
