<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8">

            <TextView
                android:id="@+id/address_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_address_name"
                android:textColor="#444"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/address_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/address_name_title"
                android:text="xxx"
                android:textColor="#444"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/address_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="18888888888"
                android:textColor="#444"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_address_address"
                android:textColor="#444"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/address_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxx"
                android:textColor="#444"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:background="#DCDDDF" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:padding="@dimen/dp_8">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/address_check_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_unchecked" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="@string/profile_address_set_default" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/address_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_4"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_addr_delete" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_4"
                    android:text="@string/delete" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/address_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_toLeftOf="@id/address_delete"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_addr_edit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_4"
                    android:text="@string/edit" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>